--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+<style>
+body {
+font-family: Arial, sans-serif;
+margin: 20px;
+}
+</style>
 </head>
 <body>
     <h1>Welcome to the <%= title %></h1>
